# DonutShop

./: index.html
donut-assistant/: .pre-commit-config.yaml  README.md  agents-cli-manifest.yaml  pyproject.toml
donut-assistant/.agents/scripts/: validate_tool_call.py
donut-assistant/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
donut-assistant/.semgrep/: rules.yaml
donut-assistant/app/: agent.py
donut-assistant/app/app_utils/: telemetry.py  typing.py
donut-assistant/deployment/terraform/cicd/: build_triggers.tf  github.tf  variables.tf
donut-assistant/deployment/terraform/cicd/vars/: env.tfvars
donut-assistant/deployment/terraform/single-project/: variables.tf
donut-assistant/deployment/terraform/single-project/vars/: env.tfvars
donut-assistant/tests/: conftest.py  test_agent.py
donut-assistant/tests/unit/: test_award_loyalty_points.py  test_get_loyalty_points.py  test_process_cart_checkout.py  test_update_discount_status.py
submission_frontend/: main.py  pyproject.toml
