[project]
name = "submission_frontend"
version = "0.1.0"
description = "Manager Dashboard Service for Donut Shop Expense Approvals"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "uvicorn>=0.28.0,<1.0.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.156.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
